; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/controller/dwc/extr_pcie-designware-ep.c_dw_pcie_ep_set_msi.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/controller/dwc/extr_pcie-designware-ep.c_dw_pcie_ep_set_msi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_epc = type { i32 }
%struct.dw_pcie_ep = type { i32 }
%struct.dw_pcie = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@PCI_MSI_FLAGS = common dso_local global i32 0, align 4
@PCI_MSI_FLAGS_QMASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_epc*, i32, i32)* @dw_pcie_ep_set_msi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dw_pcie_ep_set_msi(%struct.pci_epc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pci_epc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.dw_pcie_ep*, align 8
  %9 = alloca %struct.dw_pcie*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.pci_epc* %0, %struct.pci_epc** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %12 = load %struct.pci_epc*, %struct.pci_epc** %5, align 8
  %13 = call %struct.dw_pcie_ep* @epc_get_drvdata(%struct.pci_epc* %12)
  store %struct.dw_pcie_ep* %13, %struct.dw_pcie_ep** %8, align 8
  %14 = load %struct.dw_pcie_ep*, %struct.dw_pcie_ep** %8, align 8
  %15 = call %struct.dw_pcie* @to_dw_pcie_from_ep(%struct.dw_pcie_ep* %14)
  store %struct.dw_pcie* %15, %struct.dw_pcie** %9, align 8
  %16 = load %struct.dw_pcie_ep*, %struct.dw_pcie_ep** %8, align 8
  %17 = getelementptr inbounds %struct.dw_pcie_ep, %struct.dw_pcie_ep* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %3
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %4, align 4
  br label %50

23:                                               ; preds = %3
  %24 = load %struct.dw_pcie_ep*, %struct.dw_pcie_ep** %8, align 8
  %25 = getelementptr inbounds %struct.dw_pcie_ep, %struct.dw_pcie_ep* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @PCI_MSI_FLAGS, align 4
  %28 = add nsw i32 %26, %27
  store i32 %28, i32* %11, align 4
  %29 = load %struct.dw_pcie*, %struct.dw_pcie** %9, align 8
  %30 = load i32, i32* %11, align 4
  %31 = call i32 @dw_pcie_readw_dbi(%struct.dw_pcie* %29, i32 %30)
  store i32 %31, i32* %10, align 4
  %32 = load i32, i32* @PCI_MSI_FLAGS_QMASK, align 4
  %33 = xor i32 %32, -1
  %34 = load i32, i32* %10, align 4
  %35 = and i32 %34, %33
  store i32 %35, i32* %10, align 4
  %36 = load i32, i32* %7, align 4
  %37 = shl i32 %36, 1
  %38 = load i32, i32* @PCI_MSI_FLAGS_QMASK, align 4
  %39 = and i32 %37, %38
  %40 = load i32, i32* %10, align 4
  %41 = or i32 %40, %39
  store i32 %41, i32* %10, align 4
  %42 = load %struct.dw_pcie*, %struct.dw_pcie** %9, align 8
  %43 = call i32 @dw_pcie_dbi_ro_wr_en(%struct.dw_pcie* %42)
  %44 = load %struct.dw_pcie*, %struct.dw_pcie** %9, align 8
  %45 = load i32, i32* %11, align 4
  %46 = load i32, i32* %10, align 4
  %47 = call i32 @dw_pcie_writew_dbi(%struct.dw_pcie* %44, i32 %45, i32 %46)
  %48 = load %struct.dw_pcie*, %struct.dw_pcie** %9, align 8
  %49 = call i32 @dw_pcie_dbi_ro_wr_dis(%struct.dw_pcie* %48)
  store i32 0, i32* %4, align 4
  br label %50

50:                                               ; preds = %23, %20
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local %struct.dw_pcie_ep* @epc_get_drvdata(%struct.pci_epc*) #1

declare dso_local %struct.dw_pcie* @to_dw_pcie_from_ep(%struct.dw_pcie_ep*) #1

declare dso_local i32 @dw_pcie_readw_dbi(%struct.dw_pcie*, i32) #1

declare dso_local i32 @dw_pcie_dbi_ro_wr_en(%struct.dw_pcie*) #1

declare dso_local i32 @dw_pcie_writew_dbi(%struct.dw_pcie*, i32, i32) #1

declare dso_local i32 @dw_pcie_dbi_ro_wr_dis(%struct.dw_pcie*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
